--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/favicon_example.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>이현한방병원</title>
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=ab43daab631c1e378598396742264fb7"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
