--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>이현한방병원</title>
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=ab43daab631c1e378598396742264fb7"
+      src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=ab43daab631c1e378598396742264fb7"
     ></script>
   </head>
   <body>
