--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       type="text/javascript"
       src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=ab43daab631c1e378598396742264fb7"
     ></script>
+    <meta
+      name="naver-site-verification"
+      content="71aea50c51c7e5cb63cb3d0b298809643db076bb"
+    />
   </head>
   <body>
     <div id="root"></div>
