--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     />
     <link rel="icon" type="image/svg+xml" href="/favicon_example.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>이현한방병원</title>
+    <title>이현한방병원 | 구미 산동 한방병원 | 교통사고 후유증</title>
+    <meta
+      name="description"
+      content="구미 산동에 위치한 이현한방병원입니다.
+      교통사고 후유증, 디스크, 재활치료를 중심으로 하여 피부과 진료까지 정성껏
+      진료합니다."
+    />
     <script
       type="text/javascript"
       src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=ab43daab631c1e378598396742264fb7"
