[Feat] #25 og tag added
index.html 파일에 open graph 태그 추가 및 대표 로고 이미지 추가

--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
       교통사고 후유증, 디스크, 재활치료를 중심으로 하여 피부과 진료까지 정성껏
       진료합니다."
     />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.e-hyun-hospital.kr" />
+    <meta
+      property="og:title"
+      content="이현한방병원 | 구미 산동 한방병원 | 교통사고 후유증"
+    />
+    <meta
+      property="og:description"
+      content="구미 산동에 위치한 이현한방병원입니다. 교통사고 후유증, 디스크, 재활치료를 중심으로 하여 피부과 진료까지 정성껏 진료합니다."
+    />
+    <meta
+      property="og:image"
+      content="https://www.e-hyun-hospital.kr/e-hyun-logo.png"
+    />
     <script
       type="text/javascript"
       src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=ab43daab631c1e378598396742264fb7"
