[Feat] #25 - 트래픽 추적 코드 추가

--- a/index.html
+++ b/index.html
@@ -37,6 +37,19 @@
       name="naver-site-verification"
       content="71aea50c51c7e5cb63cb3d0b298809643db076bb"
     />
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-3XHG9FN4EQ"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-3XHG9FN4EQ");
+    </script>
   </head>
   <body>
     <div id="root"></div>
