--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google" content="notranslate" />
     <link
       href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;700&display=swap"
       rel="stylesheet"
