--- a/404.html
+++ b/404.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google" content="notranslate" />
     <link
       href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;700&display=swap"
       rel="stylesheet"
@@ -35,7 +36,7 @@
     ></script>
     <meta
       name="naver-site-verification"
-      content="71aea50c51c7e5cb63cb3d0b298809643db076bb"
+      content="dca9cf095de521c25ffe8062be42e874af905ada"
     />
     <script
       async
