[Refactor] #19 - vite-plugin-sitemap 설정 변경 및 일부 예전 도메인을 새로 변경

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       진료합니다."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.e-hyun-hospital.kr" />
+    <meta property="og:url" content="https://www.e-hyun-gumi.kr" />
     <meta
       property="og:title"
       content="이현한방병원 | 구미 산동 한방병원 | 교통사고 후유증"
