--- a/public/404.html
+++ b/public/404.html
@@ -17,7 +17,7 @@
       진료합니다."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.e-hyun-hospital.kr" />
+    <meta property="og:url" content="https://www.e-hyun-gumi.kr" />
     <meta
       property="og:title"
       content="이현한방병원 | 구미 산동 한방병원 | 교통사고 후유증"
